--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
     defaultConfig {
-        applicationId "com.komi.dragger"
+        applicationId "com.komi.dagger"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
